--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="VidCoder.View.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:p="clr-namespace:VidCoder"
+    xmlns:local="clr-namespace:VidCoder"
+    xmlns:model="clr-namespace:HandBrake.Interop;assembly=HandBrakeInterop"
     xmlns:VidCoderDragDrop="clr-namespace:VidCoder.DragDropUtils"
     Title="VidCoder"
     Width="671"
@@ -11,6 +12,7 @@
     Style="{StaticResource NormalWindow}"
     Closing="Window_Closing" AllowDrop="True" PreviewDrop="Window_Drop" PreviewDragOver="Window_PreviewDragOver">
     <Window.Resources>
+        <local:EnumDisplayer Type="{x:Type model:VideoEncoder}" x:Key="VideoEncoderChoices" />
         <Style x:Key="SectionHeader" TargetType="TextBlock">
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="FontSize" Value="14" />
@@ -100,6 +102,14 @@
             <TextBlock
                 Text="{Binding Job.OutputPath}" TextTrimming="CharacterEllipsis"
                 ToolTip="{Binding Job.OutputPath}" ToolTipService.InitialShowDelay="0" ToolTipService.Placement="Relative" ToolTipService.VerticalOffset="-2" ToolTipService.HorizontalOffset="-6"
+                Style="{StaticResource QueueText}" />
+        </DataTemplate>
+        <DataTemplate x:Key="QueueTemplateVideoEncoder">
+            <TextBlock Text="{Binding Profile.VideoEncoder, Converter={StaticResource VideoEncoderChoices}}"
+                Style="{StaticResource QueueText}" />
+        </DataTemplate>
+        <DataTemplate x:Key="QueueTemplateAudioEncoder">
+            <TextBlock Text="{Binding AudioEncodersDisplay}"
                 Style="{StaticResource QueueText}" />
         </DataTemplate>
         <DataTemplate x:Key="QueueRemoveTemplate">
