Fixed bug where autocrop was not being applied correctly. Fixed problem with autocrop not updating when different titles are picked. Changed preview window background to a dark gray to highlight black borders around previewed picture.

--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -15,7 +15,7 @@
         </Storyboard>
     </Window.Resources>
     <Grid>
-        <Grid Margin="0" Name="previewImageHolder" SizeChanged="previewImageHolder_SizeChanged" Background="Black">
+        <Grid Margin="0" Name="previewImageHolder" SizeChanged="previewImageHolder_SizeChanged" Background="#222222">
             <Image
                 Name="previewImage" Stretch="Fill" HorizontalAlignment="Left" VerticalAlignment="Top"
                 Source="{Binding PreviewSource}"
