--- a/VidCoder/View/QueueTitlesDialog.xaml
+++ b/VidCoder/View/QueueTitlesDialog.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:VidCoder"
         xmlns:controls="clr-namespace:VidCoder.Controls"
-        Title="Queue Multiple Titles" Height="383" Width="416"
-        Style="{StaticResource NormalWindow}" ShowInTaskbar="False" WindowStartupLocation="CenterOwner">
+        Title="Queue Multiple Titles" Height="383" Width="333" MinWidth="290" MinHeight="220"
+        Style="{StaticResource NormalWindow}" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Closing="Window_Closing">
     <Grid>
         <TextBlock Height="23" HorizontalAlignment="Left" Margin="12,12,0,0" Name="textBlock1" Text="Pick multiple titles to add to the queue." VerticalAlignment="Top" Width="244" />
         <ListView
@@ -21,7 +21,24 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <StackPanel Orientation="Horizontal" Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+        <CheckBox Name="checkBox1" Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom" IsChecked="{Binding SelectRange}">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="All titles from" Margin="0,0,4,0" VerticalAlignment="Center" />
+                <controls:NumberBox
+                    Width="30"
+                    Number="{Binding StartRange, Mode=TwoWay}"
+                    Minimum="0"
+                    AllowEmpty="False" />
+                <TextBlock Text="to" Margin="4,0,4,0" VerticalAlignment="Center" />
+                <controls:NumberBox
+                    Width="30"
+                    Number="{Binding EndRange, Mode=TwoWay}"
+                    Minimum="0"
+                    AllowEmpty="False" />
+                <TextBlock Text="minutes" Margin="4,0,0,0" VerticalAlignment="Center" />
+            </StackPanel>
+        </CheckBox>
+        <!--<StackPanel Orientation="Horizontal" Margin="23,0,0,46" HorizontalAlignment="Left" VerticalAlignment="Bottom">
             <CheckBox Height="16" Name="checkBox1" VerticalAlignment="Center" IsChecked="{Binding SelectRange}" />
             <TextBlock Text="All titles from" Margin="8,0,4,0" VerticalAlignment="Center" />
             <controls:NumberBox
@@ -36,7 +53,7 @@
                 Minimum="0"
                 AllowEmpty="False" />
             <TextBlock Text="minutes" Margin="4,0,0,0" VerticalAlignment="Center" />
-        </StackPanel>
+        </StackPanel>-->
         <Button
             Content="OK"
             Command="{Binding AcceptCommand}"
