--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -132,7 +132,16 @@
     </Window.Resources>
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo ProgressValue="{Binding OverallEncodeProgressFraction}" ProgressState="{Binding EncodeProgressState}" />
-    </Window.TaskbarItemInfo> 
+    </Window.TaskbarItemInfo>
+    <Window.InputBindings>
+        <KeyBinding Key="Q" Modifiers="Control" Command="{Binding AddToQueueCommand}" />
+        <KeyBinding Key="L" Modifiers="Control" Command="{Binding OpenLogWindowCommand}" />
+        <KeyBinding Key="N" Modifiers="Control" Command="{Binding OpenEncodingWindowCommand}" />
+        <KeyBinding Key="P" Modifiers="Control" Command="{Binding OpenPreviewWindowCommand}" />
+        <KeyBinding Key="O" Modifiers="Control+Shift" Command="{Binding QueueFilesCommand}" />
+        <KeyBinding Key="T" Modifiers="Control" Command="{Binding QueueTitlesCommand}" />
+        <KeyBinding Key="D" Modifiers="Control" Command="{Binding PickOutputPathCommand}" />
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -143,10 +152,12 @@
             <MenuItem Header="File">
                 <MenuItem
                     Header="Enqueue Multiple Files..."
-                    Command="{Binding QueueFilesCommand}" />
+                    Command="{Binding QueueFilesCommand}"
+                    InputGestureText="Ctrl+Shift+O"/>
                 <MenuItem
                     Header="Enqueue Multiple Titles..."
                     Command="{Binding QueueTitlesCommand}"
+                    InputGestureText="Ctrl+T"
                     Visibility="{Binding CanEnqueueMultipleTitles, Converter={StaticResource VisibilityConverter}}"/>
             </MenuItem>
             <MenuItem Header="Tools">
@@ -156,15 +167,18 @@
                 <MenuItem
                     Header="Encoding Settings"
                     Command="{Binding OpenEncodingWindowCommand}"
-                    IsCheckable="True" IsChecked="{Binding EncodingWindowOpen}" />
+                    IsCheckable="True" IsChecked="{Binding EncodingWindowOpen}"
+                    InputGestureText="Ctrl+N"/>
                 <MenuItem
                     Header="Preview"
                     Command="{Binding OpenPreviewWindowCommand}"
-                    IsCheckable="True" IsChecked="{Binding PreviewWindowOpen}" />
+                    IsCheckable="True" IsChecked="{Binding PreviewWindowOpen}"
+                    InputGestureText="Ctrl+P"/>
                 <MenuItem
                     Header="Log"
                     Command="{Binding OpenLogWindowCommand}"
-                    IsCheckable="True" IsChecked="{Binding LogWindowOpen}" />
+                    IsCheckable="True" IsChecked="{Binding LogWindowOpen}"
+                    InputGestureText="Ctrl+L"/>
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="VidCoder Homepage" Command="{Binding OpenHomepageCommand}">
@@ -188,7 +202,6 @@
                     Margin="4,0,0,0"
                     Name="sourceBox" ItemsSource="{Binding SourceOptions}" SelectionChanged="sourceBox_SelectionChanged"
                     IsEnabled="{Binding ScanningSource, Converter={StaticResource InverseBoolConverter}}">
-                <!--<ComboBox ItemsSource="{Binding SourceOptions}" SelectedItem="{Binding SelectedSource}">-->
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
