--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -14,6 +14,10 @@
                 To="1.0" Duration="0:0:0.2" />
         </Storyboard>
     </Window.Resources>
+    <Window.InputBindings>
+        <KeyBinding Key="L" Modifiers="Control" Command="{Binding MainViewModel.OpenLogWindowCommand}" />
+        <KeyBinding Key="N" Modifiers="Control" Command="{Binding MainViewModel.OpenEncodingWindowCommand}" />
+    </Window.InputBindings>
     <Grid>
         <Grid Margin="0" Name="previewImageHolder" SizeChanged="previewImageHolder_SizeChanged" Background="#222222">
             <Image
