Added percent display on top of overall encode progress bar.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -7,6 +7,7 @@
         <converters:EnumBoolConverter x:Key="EnumBoolConverter" />
         <converters:EnumBoolInverseConverter x:Key="EnumBoolInverseConverter" />
         <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
+        <converters:PercentDisplayConverter x:Key="PercentDisplayConverter" />
         <Style x:Key="RowButton" TargetType="{x:Type Button}">
             <Setter Property="Height" Value="23" />
             <Setter Property="VerticalAlignment" Value="Center" />
